fixed more rounding and spacing because for whateve r

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -46,7 +46,7 @@ button {
   /* box-shadow: inset 0 -3px transparent; */
   /* Avoid rounded borders under each button name */
   border: none;
-  border-radius: 0;
+  border-radius: 999;
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
@@ -79,7 +79,7 @@ button:hover {
   margin: 0 2px;
   min-width: 10px;
   min-height: 8px;
-  padding: 0px 4px;
+  padding: 0px 6px;
   background-color: transparent;
   color: #ffffff;
   border-radius: 100px;
